# FFW2D

./: .gitignore  CMakeLists.txt  README.md  plt.m  plt.py  pltani.py  pltslice.py  pltsweep.py
.obsidian/: workspace.json
test/: g107137.010200  ne_107137_10s.txt
